argocd/aws/666628074417/clusters/cbioportal-prod/apps/cbiolab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbiolab
spec:
  selector:
    app: cbiolab
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
