argocd/aws/666628074417/clusters/cbioportal-prod/apps/cbiolab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbiolab-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  ingressClassName: nginx
  rules:
    - host: cbiolab.cbioportal.aws.mskcc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cbiolab
                port:
                  number: 80
